--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "antd": "^4.6.5",
     "axios": "^0.20.0",
     "cloudinary-react": "^1.6.6",
+    "concurrently": "^7.0.0",
     "image-to-base64": "^2.1.1",
     "material-ui": "^0.20.2",
     "material-ui-dropzone": "^3.5.0",
@@ -39,11 +40,12 @@
     "react-slick": "^0.27.11",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.49.0",
     "typescript": "^3.7.5",
     "uuid": "^8.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "concurrently \"react-scripts start\" \"sass ./src/sass/main.scss ./src/index.css -w\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
